@@ -1,6 +1,7 @@
 $Rev$
 [2007/11/08]
 dropfile plugin     Add dropfile plugin. thanks Tyberius Prime
+InputAssistant.py   Fix Alt+X Ctrl+X key press bug
 
 [2007/10/14]
 mHelp.py            Can automatically switch lanauge according the current lanaguage
